--- a/ApiProjeKampi.WebUI/Views/_ViewImports.cshtml
+++ b/ApiProjeKampi.WebUI/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using ApiProjeKampi.WebUI.Models
 @using ApiProjeKampi.WebUI.DTOs.TestimonialDTOs
 @using ApiProjeKampi.WebUI.DTOs.EventDTOs
+@using ApiProjeKampi.WebUI.DTOs.ChefDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
